- Fixed: If a player can escape jail with a mod like enhanced movement put him back again into the jail if he is too far away; if he does it 10 times then the player will be banned for the running session
- Fixed: Object compositions were placed half in the ground on CUP Winter Chernarus
- Fixed: Event triggers now have a defined height to prevent flyovers from triggering ground events, by longtimegamer
- Fixed: In ranked mode players with rank private ended up with just one uniform in Virtual Arsenal
- Fixed: incorrect logic in maintarget event selection, improved dashboard list and line breaks, by longtimegamer
- Fixed: Camouflage script had the wrong stance in it, "STANCE" instead of "STAND"
- Fixed: ToolKit was missing in the unsung version in VA
- Fixed: Choppers exploded on the carrier in the carrier version (yet again)
- Fixed: Fog, overcast and date can be set again by Zeus
- Fixed: In the CUP Chernarus 2020 version Land_trafostanica_velka objects do not exist near Zelenogorsk which broke the side mission
- Fixed: TFAR radios are now no longer removed when another mod version like CUP is played
- Fixed: ACE medical items were not available in ranked mode
- Fixed: Line breaks were broken in hintChat function
- Fixed: Main target creation in the TT version was broken
- Improved: Make use of new A3 2.02 scripting commands where possible
- Improved: Use new import keyword to load UI configs from the game itself rather than copying them into description.ext
- Improved security: The following scripting commands can no longer be executed over the network when remoteexec mode is set to 1: setVariable, switchMove, setDir, hideObjectGlobal, endMission, setCaptive and addScore
- Workaround: If an enemy AI vehicle is under water for whatever reasons it virtually can't be destroyed; the workaround adds more damage in that case
- Added slightly more debug output (possible with improved A3 logging)
- And more optimizations like for example eachframerun