@@ -1,12 +1,2 @@
 STR_DOM_MISSIONSTRING_AI_SILENT
-STR_DOM_MISSIONSTRING_LOAD_OVERRIDES_FILE
 STR_DOM_MISSIONSTRING_2042
-STR_DOM_MISSIONSTRING_2043
-STR_DOM_MISSIONSTRING_2044
-STR_DOM_MISSIONSTRING_2045
-STR_DOM_MISSIONSTRING_2046
-STR_DOM_MISSIONSTRING_2047
-STR_DOM_MISSIONSTRING_2048
-STR_DOM_MISSIONSTRING_2049
-STR_DOM_MISSIONSTRING_STATICWEAPONS
-STR_DOM_MISSIONSTRING_2051
